--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -459,7 +459,9 @@ body {
   /* =========================
      SIGNUP FORM / JOIN BUTTON
   ========================= */
-
+.join-button { 
+      margin-bottom: 12px !important; 
+  }
 
 /* =========================
    UNIFIED SIGNUP + DISCORD STACK
@@ -619,8 +621,8 @@ body {
   color: #fff;
   text-decoration: none;
   box-shadow: 3px 3px 0px rgba(138,43,226,0.3);
-  margin-top: 12px !important;
-  gap: 12px;              /* space between icon and text */
+  margin-top: 8px !important;
+  gap: 8px;              /* space between icon and text */
 }
 
 .discord-button i {
