--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -619,7 +619,7 @@ body {
   font-size: 1rem;
   font-weight: 700;
   border-radius: 50px;
-  background: #ff4081;
+  background: #2f55ff;
   color: #fff;
   text-decoration: none;
   box-shadow: 3px 3px 0px rgba(138,43,226,0.3);
