--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -930,7 +930,7 @@ body {
     font-size: 8px !important;
     line-height: 1.2 !important;
     padding: 6px 8px !important;
-    border-radius: 12px !important;
+    border-radius: 60px !important;
     background: #f5f5f5 !important;
     color: #333 !important;
     text-align: center !important;
@@ -939,7 +939,7 @@ body {
   }
 
   nav.tab-container button.tab-link.active {
-    background: #ff4081 !important;
+    background: #1228ec !important;
     color: #fff !important;
   }
 
