--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -796,7 +796,7 @@ body {
     width: fit-content;
     border-radius: 50px !important;
     border: 1px solid orange !important;
-    background: url('../../images/tab-pill-bg.jpg') center/cover no-repeat;
+    background: url('../../images/tab-pill-bg.jpg') center/cover no-repeat !important;
     position: relative;
 }
 
@@ -939,8 +939,8 @@ body {
   }
 
   nav.tab-container button.tab-link.active {
-    background: #1228ec !important;
-    color: #fff !important;
+    background: #ffffff !important;
+    color: #000000 !important;
   }
 
   nav.tab-container {
