--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -823,6 +823,16 @@ body {
 }
 
 /* Tab content */
+
+.tab-content {
+    color: black !important;
+    text-align: left;
+  }
+
+.tab-content h1, h2, h3, h4, strong {
+    color: black !important;
+  }
+
 #about .tabs-section .tab-card { width: 100%; max-width: 900px; margin: 0 auto 40px; }
 #about .tabs-section .tab-content {
     display: none;
@@ -851,6 +861,27 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     line-height: 1.6;
+    scrollbar-width: thin;           
+    scrollbar-color: #9940ff #f5f5f5; 
+}
+
+#about .tabs-section .tab-content::-webkit-scrollbar {
+    width: 8px;                      /* scrollbar width */
+}
+
+#about .tabs-section .tab-content::-webkit-scrollbar-track {
+    background: #f5f5f5;             /* track background */
+    border-radius: 10px;             /* rounded pill track */
+}
+
+#about .tabs-section .tab-content::-webkit-scrollbar-thumb {
+    background-color: #ff4081;       /* thumb color */
+    border-radius: 10px;             /* rounded pill thumb */
+    border: 2px solid #f5f5f5;      /* optional: padding around thumb */
+}
+
+#about .tabs-section .tab-content::-webkit-scrollbar-button {
+    display: none !important;                   /* remove the arrows */
 }
 
 #about .tabs-section .tab-content.active { display: block; }
