--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -829,9 +829,16 @@ body {
     text-align: left;
   }
 
-.tab-content h1, h2, h3, h4, strong {
+.tab-content h2, h3, h4, strong {
     color: black !important;
   }
+
+.outlined-text {
+    color: white;                    /* fill color */
+    -webkit-text-stroke: 4px #01042c;  /* stroke thickness and color */
+    font-weight: bold; 
+}
+
 
 #about .tabs-section .tab-card { width: 100%; max-width: 900px; margin: 0 auto 40px; }
 #about .tabs-section .tab-content {
@@ -865,24 +872,28 @@ body {
     scrollbar-color: #9940ff #f5f5f5; 
 }
 
+/* WebKit browsers */
 #about .tabs-section .tab-content::-webkit-scrollbar {
-    width: 8px;                      /* scrollbar width */
+    width: 8px;                       /* scrollbar width */
 }
 
 #about .tabs-section .tab-content::-webkit-scrollbar-track {
-    background: #f5f5f5;             /* track background */
-    border-radius: 10px;             /* rounded pill track */
+    background: #f5f5f5;
+    border-radius: 10px;
 }
 
 #about .tabs-section .tab-content::-webkit-scrollbar-thumb {
-    background-color: #ff4081;       /* thumb color */
-    border-radius: 10px;             /* rounded pill thumb */
-    border: 2px solid #f5f5f5;      /* optional: padding around thumb */
+    background-color: #ff4081;
+    border-radius: 10px;
+    border: 2px solid #f5f5f5;
 }
 
 #about .tabs-section .tab-content::-webkit-scrollbar-button {
-    display: none !important;                   /* remove the arrows */
+    width: 0 !important;
+    height: 0 !important;
+    display: none !important;
 }
+
 
 #about .tabs-section .tab-content.active { display: block; }
 
