Re-upload entire website

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -981,7 +981,7 @@ body {
     padding: 6px 8px !important;
     border-radius: 60px !important;
     background: transparent !important;
-    color: #333 !important;
+    color: #ffffff !important;
     text-align: center !important;
     white-space: nowrap !important;
     box-sizing: border-box !important;
