--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -423,6 +423,7 @@ body {
   .locker-section .logo-right-mobile,
   .locker-section .social-icons {
     margin-bottom: 1px !important;  /* hugs bottom */
+    align-self: flex-end;
   }
 
   #intro .left-column {
@@ -1028,10 +1029,10 @@ body {
   .outlined-text {
         color: white;
     text-shadow:
-        2px 0 0 #01042c,
-       -2px 0 0 #01042c,
-        0 2px 0 #01042c,
-        0 -2px 0 #01042c,
+        1px 0 0 #01042c,
+       -1px 0 0 #01042c,
+        0 1px 0 #01042c,
+        0 -1px 0 #01042c,
         1px 1px 0 #01042c,
        -1px -1px 0 #01042c,
         1px -1px 0 #01042c,
